[package]
name = "abci"
version = "0.7.2"
authors = ["Adrian Brink <adrian@brink-holdings.com>", "Jackson Lewis <st.japa6@gmail.com>", "Dave Bryson", "Tomas Tauber"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Tendermint ABCI server for Rust"
homepage = "https://tendermint.com/docs/spec/abci/"
repository = "https://github.com/tendermint/rust-abci"
keywords = ["abci", "tendermint", "blockchain", "rust"]
readme = "README.md"
include = ["src/**/*", "Cargo.toml"]

[dependencies]
bytes = "1.0.1"
protobuf = "2.22.0"
byteorder = "1.4.2"
integer-encoding = "3.0.1"
log = "0.4.14"
env_logger = "0.8.2"
tokio = { version = "1.2.0", features = ["net", "rt", "io-std", "sync"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
futures = "0.3.12"

[build-dependencies]
protobuf-codegen-pure = "2.22.0"
